finalisation index.html

--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
     </footer>
   </body>
 </html>
+
 <style>
   @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
@@ -461,7 +462,7 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   overflow-x: hidden;
-  padding: 20px;
+  padding: 10px;
 }
 
 .menu {
@@ -879,7 +880,7 @@ a {
 .activities {
   display: grid;
   column-gap: 2rem;
-  margin: 4rem 0;
+  margin: 2rem 0;
 }
 
 .img-container {
@@ -909,8 +910,8 @@ a {
 
 .activities h1 {
   grid-column: 1/-1;
-  margin: 10px;
-  padding: 10px;
+  margin: 15px;
+  padding: 0px;
 }
 
 .title-activities {
@@ -995,7 +996,7 @@ footer {
 
   .header_logo {
     width: 120px;
-    margin-top: -90px;
+    margin-top: -85px;
     margin-left: 10px;
     position: absolute;
   }
@@ -1049,8 +1050,9 @@ footer {
 
   .heb-pop-container {
     flex-direction: column;
+    padding: 0px;
+    margin: 0px;
   }
-  
 
   .heb-container {
     width: calc(100% - 60px);
@@ -1095,6 +1097,11 @@ footer {
 
 @media screen and (max-width: 767px) {
 
+  .body {
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+
   .register_link {
     margin-top: 20px;
     margin-right: 15px;
@@ -1102,8 +1109,8 @@ footer {
 
   .header_logo {
     width: 120px;
-    margin-top: -95px;
-    margin-left: 10px;
+    margin-top: -90px;
+    margin-left: 16px;
     position: absolute;
   }
 
@@ -1166,6 +1173,7 @@ footer {
 
   .heb-pop-container {
     flex-direction: column;
+    margin: -10px;
   }
 
   .heb-container {
@@ -1236,3 +1244,4 @@ footer {
 
 
 </style>
+</html>
