--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
       </div>
     </div>
     <main>
-      <div id="ancre-hebergement"></div>
-
-      <div class="heb-pop-container">
+    
+      <div class="heb-pop-container"> 
         <div class="heb-container">
+          <div id="ancre-hebergement"></div> 
           <h4>Hébergements à Marseille</h4>
           <div class="cards-container">
             <div class="cards-line">
@@ -234,6 +234,7 @@
             <div class="hebergement_montrer_plus">Afficher plus</div>
           </div>
         </div>
+        
         <div class="pop-container">
           <div class="pop-title-container">
             <h4>Les plus populaires</h4>
@@ -462,7 +463,7 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   overflow-x: hidden;
-  padding: 10px;
+  padding: 15px;
 }
 
 .menu {
@@ -880,7 +881,7 @@ a {
 .activities {
   display: grid;
   column-gap: 2rem;
-  margin: 2rem 0;
+  margin: 4rem 0;
 }
 
 .img-container {
@@ -906,12 +907,13 @@ a {
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  margin-right: 30px;
 }
 
 .activities h1 {
   grid-column: 1/-1;
-  margin: 15px;
-  padding: 0px;
+  padding-bottom: 20px;
+  margin: 5px;
 }
 
 .title-activities {
@@ -996,7 +998,7 @@ footer {
 
   .header_logo {
     width: 120px;
-    margin-top: -85px;
+    margin-top: -86px;
     margin-left: 10px;
     position: absolute;
   }
@@ -1078,6 +1080,11 @@ footer {
     width: 100%;
   }
 
+  .activities h1 {
+    padding-bottom: 10px;
+    margin: 5px;
+  }
+
   .activities {
     row-gap: 2rem;
     grid-template-columns: 1fr;
@@ -1104,13 +1111,13 @@ footer {
 
   .register_link {
     margin-top: 20px;
-    margin-right: 15px;
+    margin-right: 30px;
   }
 
   .header_logo {
     width: 120px;
-    margin-top: -90px;
-    margin-left: 16px;
+    margin-top: -86px;
+    margin-left: 5px;
     position: absolute;
   }
 
@@ -1161,6 +1168,12 @@ footer {
     order: 2;
   }
 
+  .activities {
+    row-gap: 2rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
+  }
+
   .recherche_bouton {
     display: none;
     background-color: #f2f2f2;
@@ -1173,7 +1186,7 @@ footer {
 
   .heb-pop-container {
     flex-direction: column;
-    margin: -10px;
+    margin: -16px;
   }
 
   .heb-container {
@@ -1182,7 +1195,7 @@ footer {
     border-radius: 10px;
     background-color: #ffffff;
     width: 70%;
-    padding: 10px;
+    padding: 20px;
   }
 
   .heb-container {
@@ -1215,11 +1228,17 @@ footer {
     gap: 2rem;
   }
 
+  .activity h1{
+    margin: 10px;
+    padding: 0px;
+  }
+
   .activities {
     row-gap: 2rem;
     grid-template-columns: 1fr;
     grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
   }
+
 
   .navigation-link-mobile {
     border: 30px solid transparent;
@@ -1234,7 +1253,7 @@ footer {
   }
 
   .type-search {
-    width: 65%;
+    width: 60%;
     padding: 10px;
     font-size: 1em;
     border-width: 1px;
