fin de index.html

--- a/index.html
+++ b/index.html
@@ -928,6 +928,7 @@ footer {
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  margin-left: -15px;
 }
 
 /*************** Only desktop *******************/
