--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   overflow-x: hidden;
-  padding: 15px;
+  padding: 18px;
 }
 
 .menu {
@@ -927,7 +927,7 @@ footer {
   background-color: #f2f2f2;
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  padding: 30px;
   margin-left: -15px;
 }
 
@@ -999,7 +999,7 @@ footer {
 
   .header_logo {
     width: 120px;
-    margin-top: -86px;
+    margin-top: -50px;
     margin-left: 10px;
     position: absolute;
   }
@@ -1114,10 +1114,10 @@ footer {
     margin-top: 20px;
     margin-right: 30px;
   }
-
+  
   .header_logo {
     width: 120px;
-    margin-top: -86px;
+    margin-top: -50px;
     margin-left: 5px;
     position: absolute;
   }
@@ -1196,7 +1196,7 @@ footer {
     border-radius: 10px;
     background-color: #ffffff;
     width: 70%;
-    padding: 20px;
+    padding: 30px;
   }
 
   .heb-container {
@@ -1207,14 +1207,13 @@ footer {
   .pop-container {
     width: calc(100% - 60px);
     order: 1;
-  }
-
-  .pop-container {
     display: flex;
     background-color: #f2f2f2;
     flex-direction: column;
     border-radius: 0px 0px 0px 0px;
+    width: 90%;
   }
+
 
   .cards-line {
     flex-direction: column;
@@ -1259,6 +1258,7 @@ footer {
     font-size: 1em;
     border-width: 1px;
     border-color: #f2f2f2;
+    border: 1px #ddd
   }
 }
 
