--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Projet2-Reservia</title>
+    <link rel="stylesheet" href="Reservia.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -392,876 +393,5 @@
   </body>
 </html>
 
-<style>
-  @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
-/**************************General**************************************/
-
-/* Header */
-
-.register_link {
-  color: #0065fc;
-  font-size: 1.2em;
-  font-weight: 600;
-}
-
-.register_link:hover {
-  color: #0065fc67;
-  transition: ease 0.3s;
-}
-
-.header_logo {
-  width: 120px;
-  padding-top: 15px;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-li {
-  list-style: none;
-}
-.header_container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 12px;
-}
-
-.navigation_container {
-  margin-right: 20px;
-}
-
-.navigation_links {
-  border: 2px solid transparent;
-  font-size: 1.2em;
-  padding-top: 28px;
-  padding-left: 15%;
-  padding-right: 15%;
-  margin-right: 50px;
-}
-
-.navigation_links:hover {
-  color: #0065fc;
-  border-top-color: #0065fc;
-}
-
-/* Navigation */
-nav {
-  display: flex;
-  align-items: baseline;
-}
-
-nav ul {
-  display: flex;
-}
-
-body {
-  min-width: 340px;
-  max-width: 1440px;
-  margin: 0 auto;
-  overflow-x: hidden;
-  padding: 18px;
-}
-
-.menu {
-  display: flex;
-  list-style-type: none;
-  justify-content: space-between;
-  /* marge a partir du haut de page ** */
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-}
-
-.navigation-container {
-  margin-right: 20px;
-}
-
-.navigation-link {
-  border: 2px solid transparent;
-  font-size: 1.3em;
-  padding-top: 37px;
-  /*padding-left: 15%; */
-  /*padding-right: 15%; */
-  margin-right: 40px;
-  text-decoration: none;
-}
-
-.navigation-link:hover {
-  border-top-color: #0065fc;
-  border-top: solid;
-  color: #0065fc;
-}
-
-.register-link {
-  color: #0065fc;
-  font-size: 1.3em;
-  font-weight: 600;
-  /*margin-top: 0px;
-  margin-left: 12px;  */
-}
-
-.img-logo {
-  color: #0065fc;
-  background-color: #deebff;
-  border-radius: 50%;
-  padding: 10px;
-  margin-right: 10px;
-}
-
-.img-entete {
-  width: 100px;
-  height: auto;
-  padding-bottom: 25px;
-}
-
-.container {
-  max-width: 1350px;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-}
-
-h1 {
-  font-size: large;
-}
-
-p {
-  font-size: small;
-}
-
-h3 {
-  font-weight: bold;
-  font-size: 1em;
-}
-
-/***************************Navigation*******************************/
-
-.hebergement-activites a:hover {
-  border-top: 3px solid #0065fc;
-}
-
-* {
-  font-family: "Raleway", sans-serif;
-}
-
-/**************************Recherche*****************************/
-
-#container-recherche {
-  display: flex;
-  padding: 20px 0px 30px 0px;
-}
-
-.type-search {
-    width: 15%;
-    padding: 10px;
-    font-size: 1em;
-    border: solid #ddd;
-  }
-
-  .type-search::placeholder {
-  color: black;
-  font-weight: 600;
-  font-size: 16px;
-  border-color: #f2f2f2;
-  padding-left: 5px;
-}
-
-.recherche_loupe {
-  /* visibility: hidden; */
-  display: none;
-  background-color: #0065fc;
-  border-radius: 15px 15px 15px 15px;
-  border: none;
-  width: 50px;
-  height: 50px;
-  font-size: 1em;
-  padding-left: 0;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-
-.recherche_bouton {
-  background-color: #0065fc;
-  border-radius: 0px 15px 15px 0px;
-  border: none;
-  color: white;
-  font-size: 15px;
-  font-weight: 600;
-  padding-left: 1.5%;
-  padding-right: 1.5%;
-  cursor: pointer;
-}
-
-
-.search_area_icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  background-color: #f2f2f2;
-  width: 50px;
-  height: 50px;
-  border-radius: 15px 0px 0px 15px;
-}
-
-/***************************Filtres**************************/
-
-.boutonfiltre p {
-  font-weight: bold;
-  font-size: 15px;
-}
-
-.filtres {
-  display: flex;
-  flex-direction: column;
-  padding: 20px 0;
-}
-
-.filtres,
-.filtres .content {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.filtres .title {
-  margin-bottom: 20px;
-  padding-top: inherit;
-  padding-right: 20px;
-}
-
-.filtres .boutonfiltre {
-  display: flex;
-  justify-content: space-between;
-  border-radius: 200px;
-  border: 1px lightgrey solid;
-  height: 50px;
-  position: relative;
-  padding-left: 55px;
-  padding-right: 14px;
-  margin-right: 20px;
-  margin-bottom: 10px;
-  transition: transform 0.2s;
-  cursor: pointer;
-}
-
-.filtres .boutonfiltre:hover {
-  transform: scale(1.05);
-}
-
-.filtres .boutonfiltre:first-child {
-  margin-left: 0;
-}
-
-.filtres .boutonfiltre:last-child {
-  margin-right: 0;
-}
-
-.filtres .boutonfiltre i {
-  line-height: 50px;
-  color: #0065fc;
-  position: absolute;
-  width: 50px;
-  text-align: center;
-  background: #deebff;
-  left: -2px;
-  border-radius: 100%;
-}
-
-.boutonfiltre p {
-  margin: auto;
-}
-
-.search i {
-  display: block;
-}
-
-.searchContainer .search span {
-  display: none;
-}
-
-/***************************Infos************************/
-
-.logo-info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #0065fc;
-  font-size: 0.7em;
-  margin-bottom: 40px;
-  border: 1px solid #deebff;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-/*******************Logement**********************/
-
-.conteneur-logement {
-  display: flex;
-}
-
-p {
-  font-size: 0.8em;
-  margin: 1px;
-}
-
-.search {
-  display: inline-flex;
-  border: 1px solid grey;
-  border-radius: 30px;
-  align-items: center;
-}
-
-/*******************Etoiles**********************/
-
-.etoile-on {
-  color: #0065fc;
-  font-weight: bold;
-  font-size: 0.8em;
-}
-
-.etoile-off {
-  color: #f2f2f2;
-  font-weight: bold;
-  font-size: 0.8em;
-}
-
-/***************Herbergement-Populaire*************/
-
-.hebergement_montrer_plus {
-  font-weight: bold;
-  margin: 2px;
-}
-
-.heb-pop-container {
-  display: flex;
-  background-color: white;
-  gap: 1rem;
-  width: 100%;
-}
-
-.images-plus-populaires {
-  max-width: 30%;
-  width: 150px;
-  height: 130px;
-  margin: 1px;
-  object-fit: cover;
-  /* arondi */
-  border-radius: 15px 0px 0px 15px;
-}
-
-.heb-container {
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  background-color: #f2f2f2;
-  width: 70%;
-  padding: 30px;
-}
-
-.cards-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  gap: 1rem;
-}
-
-.card {
-  background-color: white;
-  height: 200px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 5px #ddd;
-  transition: transform 0.2s;
-  cursor: pointer;
-  padding: 5px;
-}
-
-.heb-container .card {
-  width: 100%;
-}
-
-.pop-container .card {
-  height: auto;
-  display: flex;
-}
-
-.cards-line {
-  display: flex;
-  gap: 1rem;
-}
-
-.text-container {
-  padding: 0px 0px 0px 5px;
-  margin: 0px;
-}
-
-.pop-container {
-  display: flex;
-  background-color: #f2f2f2;
-  flex-direction: column;
-  width: 30%;
-  padding: 10px;
-  border-radius: 10px;
-  padding: 30px;
-}
-
-
-.pop-title-container {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.icone-pop {
-  padding-top: 20px;
-}
-
-.pop-cards-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  border-radius: 10px;
-}
-
-.pop-card {
-  display: flex;
-  background: white;
-  height: 120px;
-  width: 100%;
-}
-
-.text-pop-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 5px;
-}
-
-.cards-line {
-  display: flex;
-  gap: 1rem;
-  border-radius: 10px 10px 0 0;
-}
-
-.heb-container .card img {
-  width: 100%;
-  height: 120px;
-  object-fit: cover;
-  border-radius: 10px 10px 0 0;
-}
-
-.pop-container .card img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 10px 0 0 10px;
-}
-
-.photo-hover:hover {
-  transform: scale(1.05);
-  transition: ease 0.3s;
-}
-
-h3 {
-  font-weight: bold;
-  font-size: 0.8em;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-/* ***************  grid ********************* */
-
-.activities {
-  display: grid;
-  column-gap: 2rem;
-  margin: 4rem 0;
-}
-
-.img-container {
-  position: relative;
-  flex: 1;
-}
-
-.photo-hover:hover {
-  transform: scale(1.05);
-  transition: ease 0.3s;
-}
-
-.activities img {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.activities-card {
-  box-shadow: 0 0 10px #ddd;
-  border-radius: 1rem;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  margin-right: 30px;
-}
-
-.activities h1 {
-  grid-column: 1/-1;
-  padding-bottom: 20px;
-  margin: 5px;
-}
-
-.title-activities {
-  font-weight: bolder;
-  margin: 10px;
-}
-
-/* ***************** footer ****************** */
-
-footer {
-  background-color: #f2f2f2;
-  display: flex;
-  justify-content: space-between;
-  padding: 30px;
-  margin-left: -15px;
-}
-
-/*************** Only desktop *******************/
-
-@media screen and (min-width: 1024px) {
-  .activities {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto 14rem 2rem 2rem 2rem 14rem;
-  }
-
-  .activities-card.one {
-    grid-row: 2/7;
-    grid-column: 1/2;
-  }
-
-  .activities-card.two {
-    grid-column: 2/3;
-    grid-row: 2/5;
-  }
-
-  .activities-card.three {
-    grid-column: 2/3;
-    grid-row: 6/7;
-  }
-
-  .activities-card.four {
-    grid-column: 3/4;
-    grid-row: 2/7;
-  }
-
-  .activities-card.five {
-    grid-column: 4/5;
-    grid-row: 2/3;
-  }
-
-  .activities-card.six {
-    grid-column: 4/5;
-    grid-row: 4/7;
-  }
-}
-
-/********************** tablet ******************************/
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  header {
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-
-  header nav {
-    order: 2;
-    width: 100%;
-  }
-
-  header .headersigup {
-    order: 1;
-  }
-
-  .headernavlink {
-    width: 100%;
-    text-align: center;
-  }
-
-  .register_link {
-    margin-top: 20px;
-    margin-right: 15px;
-  }
-
-  .header_logo {
-    width: 120px;
-    margin-top: -50px;
-    margin-left: 10px;
-    position: absolute;
-  }
-
-  .navigation_container {
-    width: 100%;
-    margin-top: 20px;
-    margin-right: 0px;
-  }
-
-  .navigation_container li {
-    width: 50%;
-  }
-
-  .navigation_container a {
-    border-bottom-color: #f2f2f2;
-    padding-bottom: 15px;
-    width: 100%;
-    display: inline-block;
-  }
-
-  .navigation_container a:hover {
-    border-bottom-color: #0065fc;
-  }
-
-  .navigation_links {
-    padding: 0px;
-    margin: 0px;
-  }
-
-  .navigation_links:hover {
-    border-top-color: transparent;
-  }
-
-  /* Navigation */
-  nav {
-    flex-direction: column-reverse;
-    align-items: flex-end;
-    width: 100%;
-  }
-
-  nav ul {
-    text-align: center;
-    padding-left: 0px;
-  }
-
-  .hebergement-activites {
-    width: 100%;
-    display: flex;
-  }
-
-  .heb-pop-container {
-    flex-direction: column;
-    padding: 0px;
-    margin: 0px;
-  }
-
-  .heb-container {
-    width: calc(100% - 60px);
-    order: 2;
-  }
-
-  .pop-container {
-    width: calc(100% - 60px);
-    order: 1;
-  }
-
-  .pop-container {
-    display: flex;
-    background-color: #f2f2f2;
-    flex-direction: column;
-  }
-
-  .cards-line {
-    flex-direction: column;
-  }
-
-  .card {
-    width: 100%;
-  }
-
-  .activities h1 {
-    padding-bottom: 10px;
-    margin: 5px;
-  }
-
-  .activities {
-    row-gap: 2rem;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
-  }
-
-  .type-search {
-    width: 55%;
-    padding: 10px;
-    font-size: 1em;
-    border: solid #f2f2f2;
-  }
-
-}
-
-/********************** Mobil ******************************/
-
-@media screen and (max-width: 767px) {
-
-  .body {
-    margin-right: 0px;
-    margin-left: 0px;
-  }
-
-  .register_link {
-    margin-top: 20px;
-    margin-right: 30px;
-  }
-  
-  .header_logo {
-    width: 120px;
-    margin-top: -50px;
-    margin-left: 5px;
-    position: absolute;
-  }
-
-  .navigation_container {
-    width: 100%;
-    margin-top: 20px;
-    margin-right: 0px;
-  }
-
-  .navigation_container li {
-    width: 50%;
-  }
-
-  .navigation_container a {
-    border-bottom-color: #f2f2f2;
-    padding-bottom: 15px;
-    width: 100%;
-    display: inline-block;
-  }
-
-  .navigation_container a:hover {
-    border-bottom-color: #0065fc;
-  }
-
-  .navigation_links {
-    padding: 0px;
-    margin: 0px;
-  }
-
-  .navigation_links:hover {
-    border-top-color: transparent;
-  }
-
-  /* Navigation */
-  nav {
-    flex-direction: column-reverse;
-    align-items: flex-end;
-    width: 100%;
-  }
-
-  nav ul {
-    text-align: center;
-    padding-left: 0px;
-  }
-
-  .hebergement-activites {
-    /* display: none; */
-    order: 2;
-  }
-
-  .activities {
-    row-gap: 2rem;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
-  }
-
-  .recherche_bouton {
-    display: none;
-    background-color: #f2f2f2;
-  }
-
-  .recherche_loupe {
-    display: inline;
-    color: #ffffff;
-  }
-
-  .heb-pop-container {
-    flex-direction: column;
-    margin: -16px;
-  }
-
-  .heb-container {
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    background-color: #ffffff;
-    width: 70%;
-    padding: 30px;
-  }
-
-  .heb-container {
-    width: calc(100% - 60px);
-    order: 2;
-  }
-
-  .pop-container {
-    width: calc(100% - 60px);
-    order: 1;
-    display: flex;
-    background-color: #f2f2f2;
-    flex-direction: column;
-    border-radius: 0px 0px 0px 0px;
-    width: 92%;
-  }
-
-
-  .cards-line {
-    flex-direction: column;
-  }
-
-  .card {
-    width: 100%;
-  }
-
-  footer {
-    flex-direction: column;
-    gap: 2rem;
-  }
-
-  .activity h1{
-    margin: 10px;
-    padding: 0px;
-  }
-
-  .activities {
-    row-gap: 2rem;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
-  }
-
-
-  .navigation-link-mobile {
-    border: 30px solid transparent;
-    /*  cadre  */
-    padding: 10px;
-    font-size: 1em;
-  }
-
-  /************ on colorie le barre du bas  ****/
-  .navigation-link-mobile:hover {
-    border-bottom: solid #0065fc;
-  }
-
-  .type-search {
-    width: 60%;
-    padding: 10px;
-    font-size: 1em;
-    border-width: 1px;
-    border-color: #f2f2f2;
-    border: 1px #ddd
-  }
-}
-
-
-</style>
 </html>
