finalisation de index.html

--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
     <div class="header2">
       <div class="titre_principal">
         <div class="titre _trouvez">
-          <h4>Trouvez votre hébergement pour des vacances de rêve</h4>
-        </div>
-        <div class="titre_en_plein">
-          <p>En plein centre ville ou en pleine nature</p>
+          <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+          <p class="title">En plein centre ville ou en pleine nature</p>
         </div>
       </div>
 
@@ -391,7 +389,4 @@
       <div class=""></div>
     </footer>
   </body>
-</html>
-
-
 </html>
