final de index.html

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
     <div class="header2">
       <div class="titre_principal">
         <div class="titre _trouvez">
-          <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-          <p class="title">En plein centre ville ou en pleine nature</p>
+          <h4>Trouvez votre hébergement pour des vacances de rêve</h4>
+        </div>
+        <div class="titre_en_plein">
+          <p>En plein centre ville ou en pleine nature</p>
         </div>
       </div>
 
@@ -149,7 +151,7 @@
                     alt="Hôtel les mouettes"
                   />
                 </div>
-                <div class="text-container" href="#">
+                <div class="text-container">
                   <div>
                     <h3>Hôtel Les mouettes</h3>
                     <p>Nuit à partir de 76€</p>
@@ -312,7 +314,7 @@
     <div id="ancre-activites_a_marseille"></div>
 
     <section class="activities">
-      <h1>Activités à Marseille</h1>
+      <h2>Activités à Marseille</h2>
       <a href="#" class="activities-card one photo-hover">
         <div class="img-container">
           <img
